overflow bug fixed

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -17,3 +17,7 @@
     letter-spacing: 5px;
     transform: translate(-50%, -50%);
 }
+
+.home-container{
+    overflow: hidden;
+}
